--- a/style.css
+++ b/style.css
@@ -84,6 +84,22 @@ h5 {
   margin-top: 11%;
 }
 
+.global{
+  background-image: url("./images/global.jpg");
+  height: 500px;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  margin-top: 5%;
+}
+
+.tech{
+  background-image: url("./images/tech.jpg");
+  height: 500px;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  margin-top: 5%;
+}
+
 .block-line{
   height: 1px;
   margin: 1px;
@@ -101,6 +117,8 @@ h5 {
   vertical-align: middle;
     margin: 5% 0 5% 0;
 }
+
+
 
 h4{
   text-align: center;
@@ -129,35 +147,16 @@ h4{
   font-size: 30%;
 }
 
+/*Portfolio site*/
+ .Apps{
+  display: inline-block;
+  vertical-align: middle;
+  margin: 5%;
+ }
 
-/*
-h2 {
-  color: black;
-  font-size: 3em;
-  text-align: center;
-  clear: both;
-}
-
-a:hover {
-    font-size: 1.5em;
-}
-
-p {
-  color: black;
-  text-align: center;*/
-/*}
-
-.aboutmediv {
-  height: 300px;
-  width: 500px;
-  margin-left:  auto;
-  margin-right: auto;
-}*/
-/*
-.BR {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  width: 400px;
-
-}*/
+ .About_Apps{
+   float:right;
+   width: 300px;
+   margin-top: 5%;
+   margin-right: 1%
+ }
