--- a/style.css
+++ b/style.css
@@ -160,3 +160,28 @@ h4{
    margin-top: 5%;
    margin-right: 1%
  }
+
+ /*Contact*/
+
+
+.linkedin{
+  width: 300px;
+  height: 35px;
+  border: 0;
+
+}
+
+.social_media{
+  background: white;
+  width: 60%;
+  text-align: center;
+  vertical-align: center;
+  margin-left: 20%;
+  margin-right: 20%;
+  border-radius: 15px;
+  margin-bottom: 40px;
+}
+
+.mail, .github, .instagram{
+  margin-left: 20px;
+}
