--- a/portfolio_style.css
+++ b/portfolio_style.css
@@ -1,15 +1,29 @@
 
 /*//// Welcome Animation ////*/
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .animation-body{
   background-color: black;
+  width: 100%;
+  height: 100%;
+  /*margin-left: 5%;
+  margin-right: 5%;
+  padding: 0;*/
 }
 
 .fly-text{
   list-style: none;
   position: absolute;
-  left: 50%;
+  /*left: 50%;*/
   top: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  width: 100%;
+  text-align: center;
+  vertical-align: middle;
+
+  /*transform: translateX(-50%) translateY(-50%);*/
 }
 
 .fly-text li{
@@ -37,9 +51,3 @@
 .fly-text.hidden li:nth-child(5){transform: translateX(-340px) translateY(-250px);}
 .fly-text.hidden li:nth-child(6){transform: translateX(-130px) translateY(120px);}
 .fly-text.hidden li:nth-child(7){transform: translateX(30px) translateY(25px);}
-
-.Button{
-  text-align: center;
-  color: white;
-  margin-top: 500px;
-}
