--- a/style.css
+++ b/style.css
@@ -142,6 +142,8 @@ h3{
 
 .about_row {
   display: table;
+  margin-left: 5%;
+  margin-right: 5%;
   font-size: 400%;
   text-align: center;
   vertical-align: middle;
