--- a/style.css
+++ b/style.css
@@ -142,8 +142,7 @@ h3{
 
 .about_row {
   display: table;
-  margin-left: 5%;
-  margin-right: 5%;
+  width: 100%;
   font-size: 400%;
   text-align: center;
   vertical-align: middle;
